Fix h1 spacing

--- a/website/frontend/src/pages/Styles/Projects.css
+++ b/website/frontend/src/pages/Styles/Projects.css
@@ -70,6 +70,6 @@
     z-index: 1;
 }
 
-h1 {
+.projects-title {
     margin-bottom: 10%;
 }
